# songs-api

./: Cargo.toml  Dockerfile  docker-compose.yml  exaltacion.json  songs.json
migrations/2023-08-13-224421_create_songs/: down.sql  up.sql
src/: main.rs  schema.rs
src/controllers/: mod.rs  songs.rs
src/db/: mod.rs
src/models/: mod.rs
src/routes/: fill.rs  mod.rs  songs.rs
