[package]
name = "api-alabanzas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
serde = { version = "1.0.164", features = ["derive"] }
diesel = { version = "2.1.0", features = ["postgres"] }
tokio = { version = "1.26.0", features = ["full"] }
dotenvy = "0.15"
